--- a/style.css
+++ b/style.css
@@ -125,6 +125,15 @@ strong {
     min-height: 2rem;
 }
 
+#movableText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    user-select: none; /* Disable text selection */
+  }
+
 .thumb-over {
     display: none;
     position: absolute;
