--- a/style.css
+++ b/style.css
@@ -112,6 +112,33 @@ strong {
     margin: 0 10px; /* Adjust spacing between buttons as needed */
 }
 
+.contactlinks a #whatsapp {
+    display: inline-block;
+    width: 30px; /* Adjust as needed */
+    height: 30px; /* Adjust as needed */
+    background-image: url("https://i.ibb.co/xKZkYDB/whatsapp-icon.png"); 
+    background-size: cover;
+    margin: 0 10px;
+}
+
+.contactlinks a #email {
+    display: inline-block;
+    width: 30px; /* Adjust as needed */
+    height: 30px; /* Adjust as needed */
+    background-image: url("https://png.pngtree.com/png-vector/20190129/ourmid/pngtree-email-vector-icon-png-image_355828.jpg"); 
+    background-size: cover;
+    margin: 0 10px;
+}
+
+.contactlinks a #github {
+    display: inline-block;
+    width: 30px; /* Adjust as needed */
+    height: 30px; /* Adjust as needed */
+    background-image: url("https://cdn-icons-png.flaticon.com/512/25/25231.png"); 
+    background-size: cover;
+    margin: 0 10px;
+}
+
 .contactlinks a:last-child {
     margin-right: 0; /* Remove margin from the last button */
 }
